--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.51",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0-beta.51",
+    "@babel/preset-env": "^7.0.0-beta.51",
+    "@babel/preset-stage-1": "^7.0.0-beta.51",
     "babel-core": "^7.0.0-0",
     "babel-jest": "^23.2.0",
-    "babel-preset-env": "^1.7.0",
     "flow-bin": "^0.75.0",
     "flow-typed": "^2.4.0",
     "jest": "^23.2.0",
-    "prettier": "^1.13.7"
+    "prettier": "^1.13.7",
+    "regenerator-runtime": "^0.12.0"
   }
 }
