--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,5 @@
     "@babel/env",
     ["@babel/preset-stage-1", { "decoratorsLegacy": true }]
   ],
-  "plugins": [ "@babel/plugin-proposal-pipeline-operator" ]
+  "plugins": ["@babel/plugin-proposal-pipeline-operator", "@babel/plugin-proposal-async-generator-functions"]
 }
