--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.51",
+    "@babel/plugin-proposal-async-generator-functions": "^7.0.0-beta.51",
     "@babel/plugin-proposal-pipeline-operator": "^7.0.0-beta.51",
     "@babel/preset-env": "^7.0.0-beta.51",
     "@babel/preset-stage-1": "^7.0.0-beta.51",
