--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "@mappable/map",
   "version": "0.0.1",
-  "main": "dist/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "author": "Pete Gleeson",
   "license": "MIT",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "node_modules/rollup/bin/rollup -c"
   },
   "jest": {
     "transform": {
@@ -22,6 +24,7 @@
     "babel-jest": "^23.2.0",
     "jest": "^23.2.0",
     "prettier": "^1.13.7",
-    "regenerator-runtime": "^0.12.0"
+    "regenerator-runtime": "^0.12.0",
+    "rollup": "^0.62.0"
   }
 }
