--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
+  "browser": "dist/umd/index.js",
   "author": "Pete Gleeson",
   "license": "MIT",
   "scripts": {
@@ -25,6 +26,7 @@
     "jest": "^23.2.0",
     "prettier": "^1.13.7",
     "regenerator-runtime": "^0.12.0",
-    "rollup": "^0.62.0"
+    "rollup": "^0.62.0",
+    "rollup-plugin-babel": "^4.0.0-beta.7"
   }
 }
