--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,9 @@
 {
-  "presets": [
-    ["@babel/env", { "modules": false }],
-    ["@babel/preset-stage-1", { "decoratorsLegacy": true }]
+  presets: [
+    ["@babel/preset-env"],
+    ["@babel/preset-stage-1", { decoratorsLegacy: true }]
   ],
-  "plugins": [
+  plugins: [
     "@babel/plugin-proposal-pipeline-operator",
     "@babel/plugin-proposal-async-generator-functions"
   ]
